# svg_rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.command
cmake/: FindCairo.cmake  FindNumerals.cmake  FindPixman.cmake  FindPugiXml.cmake  FindStb.cmake  FindSvg.cmake
include/svg/: packer.h  renderer.h
src/: CMakeLists.txt
src/svg/: packer.cpp  rasterizer.cpp  rasterizer.h  renderer.cpp  renderer.h
src/svg_texture_packer/: packer.cpp  renderer.cpp
test_app/ios_rasterizer/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.mm  main.m
test_app/ios_rasterizer/Base.lproj/: Main.storyboard
test_app/macos_rasterizer/: main.cpp
test_app/svg_rasterizer.xcodeproj/: project.pbxproj
tests/: CMakeLists.txt  main.cpp  test_pack.cpp
